--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -62,7 +62,7 @@
               </div>
               <div>
                 <h3 class="text-lg font-semibold text-blue-900">Email Us</h3>
-                <p class="text-gray-600">info@esa-ku.org<br>support@esa-ku.org</p>
+                <p class="text-gray-600">esa.kenyattauniv@gmail.com,<!--><br>esa.kenyattauniv@gmail.com <--></p>
               </div>
             </div>
             
