--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -80,17 +80,19 @@
             <div class="border-t border-gray-200 pt-6">
               <h3 class="text-lg font-semibold text-blue-900 mb-4">Connect With Us</h3>
               <div class="flex space-x-4">
-                <a href="#" class="bg-blue-100 hover:bg-blue-200 text-blue-900 p-3 rounded-full transition">
-                  <i class="fab fa-facebook-f"></i>
+                <a href="https://x.com/_ESA_KU?t=x-un9kKzcNPDSAwYcZ49YQ&s=09" target="_blank" class="bg-white hover:bg-gray-100 p-2 rounded-md transition border border-gray-200 flex items-center justify-center w-10 h-10">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-black" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+                  </svg>
                 </a>
-                <a href="#" class="bg-blue-100 hover:bg-blue-200 text-blue-900 p-3 rounded-full transition">
-                  <i class="fab fa-twitter"></i>
+                <a href="https://www.linkedin.com/in/esa-ku-a8256717b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="bg-white hover:bg-gray-100 p-2 rounded-md transition border border-gray-200 flex items-center justify-center w-10 h-10">
+                  <i class="fab fa-linkedin-in text-[#0077b5]"></i>
                 </a>
-                <a href="#" class="bg-blue-100 hover:bg-blue-200 text-blue-900 p-3 rounded-full transition">
-                  <i class="fab fa-linkedin-in"></i>
+                <a href="https://www.tiktok.com/@esaku45?_t=ZM-8yNcHA4KL9M&_r=1" target="_blank" class="bg-white hover:bg-gray-100 p-2 rounded-md transition border border-gray-200 flex items-center justify-center w-10 h-10">
+                  <i class="fab fa-tiktok text-black"></i>
                 </a>
-                <a href="#" class="bg-blue-100 hover:bg-blue-200 text-blue-900 p-3 rounded-full transition">
-                  <i class="fab fa-instagram"></i>
+                <a href="https://www.instagram.com/esa.ku?igsh=MXIyN3hsZTQxb2Z0Yw%3D%3D&utm_source=qr" target="_blank" class="bg-white hover:bg-gray-100 p-2 rounded-md transition border border-gray-200 flex items-center justify-center w-10 h-10">
+                  <i class="fab fa-instagram text-[#E1306C]"></i>
                 </a>
               </div>
             </div>
