--- a/core/templates/core/donation_success.html
+++ b/core/templates/core/donation_success.html
@@ -75,11 +75,8 @@
       Help us spread the word by sharing your contribution on social media.
     </p>
     <div class="flex justify-center space-x-4">
-      <a href="https://twitter.com/intent/tweet?text=I%20just%20donated%20to%20support%20engineering%20students%20at%20Kenyatta%20University!%20Join%20me%20in%20supporting%20ESA-KU.&url=https://esa-ku.org" target="_blank" class="bg-blue-400 hover:bg-blue-500 text-white p-3 rounded-full transition">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://esa-ku.org" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white p-3 rounded-full transition">
-        <i class="fab fa-facebook-f"></i>
+      <a href="https://x.com/intent/tweet?text=I%20just%20donated%20to%20support%20engineering%20students%20at%20Kenyatta%20University!%20Join%20me%20in%20supporting%20ESA-KU.&url=https://esa-ku.org" target="_blank" class="bg-blue-400 hover:bg-blue-500 text-white p-3 rounded-full transition">
+        <i class="fab fa-x-twitter"></i>
       </a>
       <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://esa-ku.org&title=Support%20Engineering%20Students%20at%20Kenyatta%20University&summary=I%20just%20donated%20to%20support%20engineering%20students%20at%20Kenyatta%20University!%20Join%20me%20in%20supporting%20ESA-KU." target="_blank" class="bg-blue-700 hover:bg-blue-800 text-white p-3 rounded-full transition">
         <i class="fab fa-linkedin-in"></i>
