--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -134,7 +134,7 @@
           <p class="text-gray-600 mb-4">Civil Engineering, 5th Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -154,7 +154,7 @@
           <p class="text-gray-600 mb-4">Aerospace Engineering, 4th Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -174,7 +174,7 @@
           <p class="text-gray-600 mb-4">Aerospace Engineering, 4th Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -194,7 +194,7 @@
           <p class="text-gray-600 mb-4">Electrical and Electronics Engineering, 3rd Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -214,7 +214,7 @@
           <p class="text-gray-600 mb-4">Aerospace Engineering, 3rd Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -234,7 +234,7 @@
           <p class="text-gray-600 mb-4">Biomedical Engineering, 3rd Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -254,7 +254,7 @@
           <p class="text-gray-600 mb-4">Aerospace Engineering, 2nd Year</p>
           <div class="flex justify-center space-x-3">
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-linkedin text-lg"></i></a>
-            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-twitter text-lg"></i></a>
+            <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fab fa-x-twitter text-lg"></i></a>
             <a href="#" class="text-blue-900 hover:text-blue-700"><i class="fas fa-envelope text-lg"></i></a>
           </div>
         </div>
@@ -448,10 +448,10 @@
         </div>
         <h3 class="text-xl font-bold text-blue-900 mb-2">Follow Us</h3>
         <div class="flex justify-center space-x-4 mb-2">
-          <a href="#" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-linkedin"></i></a>
+          <a href="https://x.com/_ESA_KU?t=x-un9kKzcNPDSAwYcZ49YQ&s=09" target="_blank" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/esa-ku-a8256717b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.tiktok.com/@esaku45?_t=ZM-8yNcHA4KL9M&_r=1" target="_blank" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-tiktok"></i></a>
+          <a href="https://www.instagram.com/esa.ku?igsh=MXIyN3hsZTQxb2Z0Yw%3D%3D&utm_source=qr" target="_blank" class="text-blue-900 hover:text-blue-700 text-2xl"><i class="fab fa-instagram"></i></a>
         </div>
         <p class="text-gray-700">
           Stay connected with us on social media
