--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -435,7 +435,7 @@
           </button>
         </form>
         {% if not user.is_authenticated %}
-          <a href="{% url 'membership' %}#pricingSection" class="hidden md:inline-block bg-green-700 hover:bg-green-800 text-white px-4 py-2 rounded font-bold">
+          <a href="{% url 'register_with_payment' %}" class="hidden md:inline-block bg-green-700 hover:bg-green-800 text-white px-4 py-2 rounded font-bold">
             JOIN ESA-KU
           </a> 
         {% endif %}
@@ -460,7 +460,7 @@
           <li><a href="{% url 'admin_dashboard' %}" class="block text-red-600 hover:text-red-700 font-semibold py-2">Admin Dashboard</a></li>
           {% endif %}
           {% if not user.is_authenticated %}
-          <li><a href="{% url 'membership' %}#pricingSection" class="block bg-green-700 hover:bg-green-800 text-white px-4 py-2 rounded font-bold mt-2">JOIN ESA-KU</a></li>
+          <li><a href="{% url 'register_with_payment' %}" class="block bg-green-700 hover:bg-green-800 text-white px-4 py-2 rounded font-bold mt-2">JOIN ESA-KU</a></li>
           {% endif %}
         </ul>
         <form action="{% url 'search' %}" method="get" class="p-4 border-t border-gray-200">
@@ -512,17 +512,19 @@
             Building a vibrant community of engineering minds at Kenyatta University.
           </p>
           <div class="flex space-x-3 mt-4">
-            <a href="#" class="p-2 bg-blue-800 rounded hover:bg-blue-700">
-              <ion-icon name="logo-facebook" size="small"></ion-icon>
+            <a href="https://x.com/_ESA_KU?t=x-un9kKzcNPDSAwYcZ49YQ&s=09" target="_blank" class="p-2 bg-white rounded hover:bg-gray-100">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-black" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+              </svg>
             </a>
-            <a href="#" class="p-2 bg-blue-800 rounded hover:bg-blue-700">
-              <ion-icon name="logo-twitter" size="small"></ion-icon>
+            <a href="https://www.linkedin.com/in/esa-ku-a8256717b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="p-2 bg-white rounded hover:bg-gray-100">
+              <ion-icon name="logo-linkedin" class="text-[#0077B5]" size="small"></ion-icon>
             </a>
-            <a href="#" class="p-2 bg-blue-800 rounded hover:bg-blue-700">
-              <ion-icon name="logo-linkedin" size="small"></ion-icon>
+            <a href="https://www.tiktok.com/@esaku45?_t=ZM-8yNcHA4KL9M&_r=1" target="_blank" class="p-2 bg-white rounded hover:bg-gray-100">
+              <ion-icon name="logo-tiktok" class="text-black" size="small"></ion-icon>
             </a>
-            <a href="#" class="p-2 bg-blue-800 rounded hover:bg-blue-700">
-              <ion-icon name="logo-pinterest" size="small"></ion-icon>
+            <a href="https://www.instagram.com/esa.ku?igsh=MXIyN3hsZTQxb2Z0Yw%3D%3D&utm_source=qr" target="_blank" class="p-2 bg-white rounded hover:bg-gray-100">
+              <ion-icon name="logo-instagram" class="text-[#E1306C]" size="small"></ion-icon>
             </a>
           </div>
         </div>
@@ -695,3 +697,4 @@
   {% endif %}
 </body>
 </html>
+
