--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -434,8 +434,8 @@
         </div>
         <h3 class="text-xl font-bold text-blue-900 mb-2">Email Us</h3>
         <p class="text-gray-700">
-          <a href="mailto:info@esa-ku.org" class="text-blue-900 hover:underline">info@esa-ku.org</a><br>
-          <a href="mailto:secretary@esa-ku.org" class="text-blue-900 hover:underline">secretary@esa-ku.org</a>
+          <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-900 hover:underline">esa.kenyattauniv@gmail.com</a><br>
+          <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-900 hover:underline">esa.kenyattauniv@gmail.com</a>
         </p>
       </div>
     </div>
