--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -606,7 +606,7 @@
             </li>
             <li class="flex items-center gap-1">
               <ion-icon name="mail-outline" size="small"></ion-icon>
-              <a href="mailto:contact@esa.com" class="hover:underline">contact@esa.com</a>
+              <a href="mailto:esa.kenyattauniv@gmail.com" class="hover:underline">esa.kenyattauniv@gmail.com</a>
             </li>
           </ul>
         </div>
