--- a/core/templates/core/components/manual_payment_instructions.html
+++ b/core/templates/core/components/manual_payment_instructions.html
@@ -28,7 +28,7 @@ Include this with: {% include 'core/components/manual_payment_instructions.html'
   
   <div class="mt-4 bg-blue-50 border-l-4 border-blue-500 p-3 text-xs text-blue-700">
     <p class="font-semibold mb-1">After making the payment:</p>
-    <p>Please send your M-Pesa transaction code to our support team at <a href="mailto:support@esa-ku.org" class="text-blue-700 underline">support@esa-ku.org</a> or via WhatsApp at <a href="tel:+254XXXXXXXXX" class="text-blue-700 underline">+254 XXXXXXXXX</a> for manual verification.</p>
+    <p>Please send your M-Pesa transaction code to our support team at <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-700 underline">esa.kenyattauniv@gmail.com</a> or via WhatsApp at <a href="tel:+254XXXXXXXXX" class="text-blue-700 underline">+254 XXXXXXXXX</a> for manual verification.</p>
   </div>
   
   <div class="mt-4 flex justify-end">
