--- a/core/templates/core/donate.html
+++ b/core/templates/core/donate.html
@@ -165,7 +165,7 @@
         
         <div class="mt-6 text-sm text-gray-500 space-y-2">
           <p><i class="fas fa-lock mr-1"></i> All transactions are secure and encrypted.</p>
-          <p><i class="fas fa-info-circle mr-1"></i> For large donations or corporate giving, please contact us directly at treasurer@esa-ku.ac.ke.</p>
+          <p><i class="fas fa-info-circle mr-1"></i> For large donations or corporate giving, please contact us directly at esa.kenyattauniv@gmail.com.</p>
         </div>
       </div>
     </div>
