--- a/core/templates/core/membership.html
+++ b/core/templates/core/membership.html
@@ -384,7 +384,7 @@
                 </button>
                 <div class="hidden px-6 pb-6">
                     <p class="text-gray-700">
-                        While we don't offer refunds for membership fees, you can contact us at <a href="mailto:support@esa-ku.org" class="text-blue-700 hover:underline">support@esa-ku.org</a> if you have special circumstances.
+                        While we don't offer refunds for membership fees, you can contact us at <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-700 hover:underline">esa.kenyattauniv@gmail.com</a> if you have special circumstances.
                     </p>
                 </div>
             </div>
