--- a/core/templates/core/payment_coming_soon.html
+++ b/core/templates/core/payment_coming_soon.html
@@ -84,7 +84,7 @@
             <div class="mt-8 pt-6 border-t border-gray-200">
                 <p class="text-sm text-gray-500">
                     Need help? Contact us at 
-                    <a href="mailto:contact@esa.com" class="text-blue-600 hover:text-blue-800">contact@esa.com</a>
+                    <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-600 hover:text-blue-800">esa.kenyattauniv@gmail.com</a>
                 </p>
             </div>
         </div>
