--- a/core/templates/core/receipt.html
+++ b/core/templates/core/receipt.html
@@ -283,7 +283,7 @@
             <div class="receipt-message">
                 <p>Thank you for your payment. This is your official receipt.</p>
                 <p>If you need a PDF copy, click <b>Print Receipt</b> and choose <b>Save as PDF</b> in your browser's print dialog.</p>
-                <p>If you have any questions, please contact us at <a href="mailto:info@esa-ku.org" class="text-blue-700">info@esa-ku.org</a></p>
+                <p>If you have any questions, please contact us at <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-700">esa.kenyattauniv@gmail.com</a></p>
             </div>
             
             <div class="receipt-barcode">
