--- a/core/templates/core/donate_mpesa.html
+++ b/core/templates/core/donate_mpesa.html
@@ -127,7 +127,7 @@
                 <div class="bg-gray-50 p-4 border-t">
                     <div class="text-sm">
                         <div class="mb-2"><i class="fas fa-shield-alt mr-2 text-green-700"></i>Your payment information is secure.</div>
-                        <div class="mb-0"><i class="fas fa-headset mr-2 text-green-700"></i>Need help? Contact us at <a href="mailto:support@esa-ku.org" class="text-blue-700 hover:underline">support@esa-ku.org</a></div>
+                        <div class="mb-0"><i class="fas fa-headset mr-2 text-green-700"></i>Need help? Contact us at <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-700 hover:underline">esa.kenyattauniv@gmail.com</a></div>
                     </div>
                 </div>
             </div>
